ws-slo/apps/forgejo/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forgejo
spec:
  gatewayClassName: forgejo
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-forgejo
            group: ""
            kind: Secret
    - name: ssh
      port: 22
      protocol: TCP
